--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,8 @@ dependencies {
     // recyclerView adapter
     implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.46'
     implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.5.1'
+
+    //Glide
+    implementation 'com.github.bumptech.glide:glide:4.8.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
 }
